level site index added to ws_template

--- a/ansible/artifacts/nginx_ws.conf.j2
+++ b/ansible/artifacts/nginx_ws.conf.j2
@@ -2,7 +2,7 @@ server {
     listen 80;
     server_name {{ domain }};
     root /var/www/{{ domain }};
-    index index.html index.php;
+    index ./2095_level/index.html;
 
     location / {
         try_files $uri $uri/ =404;
